# Payroll

./: .gitignore  CMakeLists.txt
Payroll/: CMakeLists.txt
PayrollTests/: CMakeLists.txt  main.cpp
